Adicionado cadastro médico.
Adicionadas rotas e documentação do cadastro médico da ONG.
